--- a/main.html
+++ b/main.html
@@ -7,8 +7,28 @@
 </head>
 
 <body>
+	<table>
+		<caption>Student Details</caption>
+		<tr>
+			<th>Name</th>
+			<th>AGE</th>
+			<th>BRANCH</th>
+		</tr>
+		<tr>
+			<td>Tejal</td>
+			<td>21</td>
+			<td>CSE</td>
+		</tr>
+		<tr>
+			<td>Rahul</td>
+			<td>22</td>
+			<td>CSE</td>
+		</tr>
+		
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
+	
 </script>
 
 </body>
